Resolve some contrast issues

--- a/textassembler_web/static/textassembler.css
+++ b/textassembler_web/static/textassembler.css
@@ -22,6 +22,10 @@ a {
   display:inline;
 }
 
+.btn-primary {
+    font-weight: bold;
+}
+
 .btn-blue {
     background-color: #00274C;
     border-color: #00274C;
@@ -154,13 +158,18 @@ input[type=checkbox], input[type=radio] {
     width: 90%;
 }
 .required {
-    color: red;
+    color: #EE0000;
+    font-weight: bold;
 }
 .error {
-    color: red;
+    color: #EE0000;
+    font-weight: bold;
 }
 .error-field {
-    border-color: red;
+    border-color: #EE0000;
+}
+.filter-option {
+    color: #232323;
 }
 
 /*******
